# ait

./: .gitignore  CHANGELOG.md  LICENSE  README.md  ait.commit.sample.config.json  ait.pull.sample.config.json  ait.pull_request.sample.config.json  ait.py  cliff.toml  debcrafter.manifest  pyproject.toml
.gitea/workflows/: build-and-deploy-release.yml  sync-github.yml
.github/workflows/: CreateRelease.yml
debian/: control  rules
src/ait/: __main__.py  ait.py
